# p5

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.rst  ISSUE_TEMPLATE.md  LICENSE  MANIFEST.in  PShape_Demo.pde  PShape_Demo.py  README.rst  SUPPORT.rst  environment.yml  name  pyproject.toml  requirements.txt  setup.py  test.py  troubleshoot.py
.github/ISSUE_TEMPLATE/: bug_report.rst
.github/workflows/: blackFormatter.yml  build-tests.yml  greetings.yml  pylint.yml  pytest.yml  sanityTesting.yml
LICENSES/: glumpy.txt
PShape_Demo/: PShape_Demo.pde
docs/: Makefile  api.rst  conf.py  index.rst  install.rst  make.bat
docs/_static/: p5.min.js
docs/examples/: index.rst
docs/guides/: for-processing-users.rst  index.rst  vscode.rst
docs/reference/: attributes.rst  color.rst  data.rst  environment.rst  graphics.rst  image.rst  (+12 more)
examples/: readme_sample.py
p5/: __init__.py  __main__.py  __version__.py
p5py/: __init__.py  __main__.py  _attribs.py  constants.py  core.py  globs.py  pmath.py  primitives.py  renderer.py  sketch.py
profiling/: README.md  arcs.py  basic_shapes.prof  basic_shapes.py  begin_contour.py  curves.py  custom_shapes.prof  custom_shapes.py  custom_shapes2.py  custom_shapes3.py  main.py  main.sh  primitives.py  spinning-cone.py  tetrahedron.py  triangle_strip.py
project-wrapups/: tushar-processing-summer-fellow-2022-product-work-report.md
tests/: example_script.py  test_cursors.py  test_events.py  test_image_load.py  test_mouse_events.py  test_renderer.py
tools/: license_header.py  license_header_info.txt
(+305 files in other folders)
